--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Welcome to My Porject</h1>
         <p>A showcase of my work this semester</p>
     </header>
 
@@ -98,7 +98,7 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <!-- Add your image here -->
-        <img src="your-photo.jpg" alt="Your Name">
+        <img src="Me.jpg">
         <p>Hello! My name is [Your Name]. I am currently studying [Your Subject] and this semester I have worked on several exciting projects. I enjoy coding, designing, and learning new technologies!</p>
     </section>
 
