--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <!-- Add your image here -->
-        <img src="Me.jpg">
-        <p>Hello! My name is [Your Name]. I am currently studying [Your Subject] and this semester I have worked on several exciting projects. I enjoy coding, designing, and learning new technologies!</p>
+        <img src="img/Me.jpg">
+        <p>Hello! My name is Ali Saboune. I am currently studying BSIT, I am an irregular student, I have classes with second and third year students and this semester I have worked on several projects.</p>
     </section>
 
     <section id="projects">
