--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <!-- Add your image here -->
-        <img src="img/Me.jpg" class="img-responsive" alt="Me" />
+        <img src="Me.jpg" class="img-responsive" alt="Ali Saboune">
+
 
 
         <p>Hello! My name is Ali Saboune. I am currently studying BSIT, I am an irregular student, I have classes with second and third year students and this semester I have worked on several projects.</p>
