--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <!-- Add your image here -->
-        <img src="Me.jpg" class="img-responsive" alt="Ali Saboune">
+        <img src="images/Me.jpg" class="img-responsive" alt="Ali Saboune">
+
 
 
 
