--- a/index.html
+++ b/index.html
@@ -117,16 +117,13 @@
             </div>
             <!-- Add more project images as needed -->
         </div>
-    </section>
-
-    <section id="contact">
+    
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:[Your Email]">[Your Email]</a></p>
-        <p>GitHub: <a href="https://github.com/[Your GitHub Username]" target="_blank">github.com/[Your GitHub Username]</a></p>
+        <p>GitHub: <a href="https://github.com/Kubo" target="_blank">github.com/[Your GitHub Username]</a></p>
     </section>
 
     <footer>
-        <p>© 2024 [Your Name] | <a href="https://github.com/[Your GitHub Username]" target="_blank">GitHub</a></p>
+        <p>© 2024 Ali Saboune | <a href="https://github.com/Kubo" target="_blank">GitHub</a></p>
     </footer>
 </body>
 </html>
