--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         </div>
     
         <h2>Contact Me</h2>
-        <p>GitHub: <a href="https://github.com/Ali-s8" target="_blank">github.com/[Your GitHub Username]</a></p>
+        <p>GitHub: <a href="https://github.com/Ali-s8" target="_blank">github.com/Ali-s8</a></p>
     </section>
 
     <footer>
-        <p>© 2024 Ali Saboune | <a href="https://github.com/Ali-s8" target="_blank">GitHub</a></p>
+        <p>© 2024 Ali Saboune | <a href="https://github.com/Ali-s8" target="_blank">Ali-s8</a></p>
     </footer>
 </body>
 </html>
