--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <!-- Add your image here -->
-        <img src="projects/img/Me.jpg" class="img-responsive" alt="" />
+        <img src="Projects/Me.jpg" class="img-responsive" alt="" />
         <p>Hello! My name is Ali Saboune. I am currently studying BSIT, I am an irregular student, I have classes with second and third year students and this semester I have worked on several projects.</p>
     </section>
 
