--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         <div class="projects">
             <!-- Add project images here -->
             <div class="project">
-                <img src="img/Lenux.jpg" alt="Project 1">
+                <img src="Projects/Lenux.jpg" alt="Project 1"><br>
+                <img src="Projects/Lenux(2).jpg" alt="Project 1"><br>
+                <img src="Projects/Lenux(3).jpg" alt="Project 1">
             </div>
             <div class="project">
                 <img src="project2.jpg" alt="Project 2">
