--- a/index.html
+++ b/index.html
@@ -107,12 +107,11 @@
         <div class="projects">
             <!-- Add project images here -->
             <div class="project">
-                <img src="Projects/Lenux.jpg" alt="Project 1"><br>
-                <img src="Projects/Lenux(2).jpg" alt="Project 1"><br>
-                <img src="Projects/Lenux(3).jpg" alt="Project 1">
+                <img src="Projects/Lenux.jpg" alt="Project 1">
+                <p>Here we used the VM ware to create an OS of Linux it was my first time and it we pretty well so do I say.</p>
             </div>
             <div class="project">
-                <img src="project2.jpg" alt="Project 2">
+                <img src="Projects/1.png" alt="Project 2">
             </div>
             <div class="project">
                 <img src="project3.jpg" alt="Project 3">
