--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
                 <p>Here we used the VM ware to create an OS of Linux it was my first time and it we pretty well so do I say.</p>
             </div>
             <div class="project">
-                <img src="Projects/1.png" alt="Project 2">
+                <img src="Projects/1.png" alt="Project 2"><br>
+                <img src="Projects/2.png" alt="Project 2"><br>
+                <img src="Projects/3.png" alt="Project 2">
+                <p>Regarding this second part we worked some projects related to these lectures but it was all during classes so I have no picture of any of the projects that we wokrked on, but I can tell they need some work and ofcourse some time to study them.</p>
             </div>
             <div class="project">
                 <img src="project3.jpg" alt="Project 3">
