--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 <p>Regarding this second part we worked some projects related to these lectures but it was all during classes so I have no picture of any of the projects that we wokrked on, but I can tell they need some work and ofcourse some time to study them.</p>
             </div>
             <div class="project">
-                <img src="Projects4.png" alt="Project 3"><br>
-                <img src="Projects5.png" alt="Project 3"><br>
-                <img src="Projects6.png" alt="Project 3"><br>
-                <img src="Projects7.png" alt="Project 3">
+                <img src="Projects/4.png" alt="Project 3"><br>
+                <img src="Projects/5.png" alt="Project 3"><br>
+                <img src="Projects/6.png" alt="Project 3"><br>
+                <img src="Projects/7.png" alt="Project 3">
                 <p>These codes are pretty long so I shared the first page of each project that I worked on, they are about Object Oriented Programming, it's meythods, attributes, Encapsulation, Interface, etc..., they are quite interesting and take some time to get things done for it needes a bit of creativity, that's it. </p>
             </div>
             <!-- Add more project images as needed -->
