--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <img src="Projects/5.png" alt="Project 3"><br>
                 <img src="Projects/6.png" alt="Project 3"><br>
                 <img src="Projects/7.png" alt="Project 3">
-                <p>These codes are pretty long so I shared the first page of each project that I worked on, they are about Object Oriented Programming, it's meythods, attributes, Encapsulation, Interface, etc..., they are quite interesting and take some time to get things done for it needes a bit of creativity, that's it. </p>
+                <p>These codes are pretty long so I shared the first page of each project that I worked on, they are about Object Oriented Programming, it's methods, attributes, Encapsulation, Interface, etc..., they are quite interesting and take some time to get things done for it needes a bit of creativity, that's it. </p>
             </div>
             <!-- Add more project images as needed -->
         </div>
