--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
     
         <p>GitHub: <a href="https://github.com/Ali-s8" target="_blank">github.com/Ali-s8</a></p>
+        <p>Email: <a href="https://github.com/Ali-s8" target="_blank">agsaboune@pcu.edu.ph</a></p>
     </section>
 
     <footer>
