--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2>About Me</h2>
         <!-- Add your image here -->
         <img src="Projects/Me.jpg" class="img-responsive" alt="" />
-        <p>Hello! My name is Ali Saboune, I was born in UAE March 21st, 2004, I am half Lebanese, half Filipino, I currently live in the Philippines in Dasma, Cavite, I am currently studying BSIT, I am an irregular student, I have classes with second and third year students and this semester I have worked on several projects.</p>
+        <p>Hello! My name is Ali Omar Saboune, I was born in UAE March 21st, 2004, I am half Lebanese, half Filipino, I currently live in the Philippines in Dasma, Cavite, I am currently studying BSIT, I am an irregular student, I have classes with second and third year students and this semester I have worked on several projects.</p>
     </section>
 
     <section id="projects">
